--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,28 @@
 
 /* Contact form styles */
 #contact-form {
-  display: table;
   margin: 50px auto;
+  font-family: 'Oswald', sans-serif;
+}
+
+#contact-form label, #contact-form input, #contact-form textarea {
+  font-weight: 300;
+  font-size: 17px;
+}
+
+.form-control:focus {
+    border-color: rgb(139, 190, 0);
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(139,190,0,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(139,190,0,.6);
+}
+
+.btn {
+  font-size: 17px;
+  font-weight: 300;
+}
+.btn-default:hover {
+    color: #fff;
+    background-color: rgba(139, 190, 0, 0.95);
+    border-color: #8bbe00;
 }
