--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@
   font-size: 40px;
   margin-top: 105px;
   margin-bottom: 0px;
+  text-shadow: 1px -1px 2px rgba(139, 190, 0, 0.6);
 }
 
 .slide-copy h2 {
@@ -201,13 +202,47 @@
 
 /* Contact form styles */
 #contact-form {
-  margin: 50px auto;
+  margin: 30px auto;
   font-family: 'Oswald', sans-serif;
 }
 
-#contact-form label, #contact-form input, #contact-form textarea {
+.contact-header {
+  color: rgba(139, 190, 0, 1);
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  text-shadow: 1px -1px 2px rgba(139, 190, 0, 0.6);
+}
+
+.contact-info {
+  color: #959595;
+  font-family: Georgia, "Oswald", serif;
+  font-size: 1.15em;
+  line-height: 1.75em;
+  margin-bottom: 15px;
+  margin-top: 16px;
+}
+
+.social {
+  display: table;
+  margin: 10px auto 20px;
+}
+
+.fa {
+  color: #8bbe00;
+  font-size: 36px;
+  margin: 10px 15px;
+}
+
+#contact-form label, #contact-form input {
   font-weight: 300;
   font-size: 17px;
+}
+
+#contact-form textarea {
+  font-weight: 300;
+  font-size: 17px;
+  resize: vertical;
 }
 
 .form-control:focus {
@@ -221,8 +256,14 @@
   font-size: 17px;
   font-weight: 300;
 }
+
 .btn-default:hover {
     color: #fff;
     background-color: rgba(139, 190, 0, 0.95);
     border-color: #8bbe00;
+}
+
+/* Footer styles */
+.copyright {
+  color: #dcdcdc;
 }
