--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .container {
-  width: 960px;
+  max-width: 960px;
 }
 
 /* Header styles */
@@ -10,6 +10,10 @@
   font-weight: 300;
   font-size: 17px;
   padding: 15px;
+}
+
+a {
+  text-decoration: none;
 }
 
 .logo-icon img {
